data/all_generated_tests/raw_wast_tests/br_ImproperFunctionCallorReturnHandling_983.wast
;; 4. **Test: Function Call with Incorrect Stack Polymorphism**    - **Description**: Implement a test where a function is called after significant manipulation of the stack's state. Ensure the function tries to `br` to a label requiring certain operand types that were altered incorrectly before the call.    - **Constraint Checked**: Validates the stack state and polymorphism properties when handling function calls.    - **Improper Handling Aspect**: Failure to preserve the correct stack state across function calls resulting in invalid operands on the stack.

(assert_invalid
  (module
    (func $test_stack_polymorphism (param i32)
      (block $label1 (result i32)
        (i32.const 42)
        (drop)
        (call 0)
        (br $label1)
      )
      (i32.eqz) 
      (drop)
    )
  )
  "type mismatch"
)